Сделал ДЗ до footer

--- a/index.html
+++ b/index.html
@@ -39,13 +39,19 @@
         <div class="header-group">
           <ul class="header-contacts list">
             <li>
-              <a class="header-email link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="header-email link" href="mailto:info@devstudio.com">
+                <svg class="icon-email" width="16" height="12">
+                  <use href="./images/icons.svg#email"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li>
-              <a class="header-tel link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+              <a class="header-tel link" href="tel:+380961111111">
+                <svg class="icon-smartphone" width="10" height="16">
+                  <use href="./images/icons.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -66,6 +72,11 @@
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
+              <div class="icons-benefits">
+                <svg class="icon-antenna" width="70" height="70">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="benefits-paragraph">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -73,6 +84,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="icons-benefits">
+                <svg class="icon-clock" width="70" height="70">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="benefits-paragraph">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -80,12 +96,22 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="icons-benefits">
+                <svg class="icon-diagram" width="70" height="70">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
               <p class="benefits-paragraph">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="benefits-item">
+              <div class="icons-benefits">
+                <svg class="icon-astronaut" width="70" height="70">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="benefits-paragraph">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -140,6 +166,62 @@
                 <h3 class="team-item-title">Ігор Дем'яненко</h3>
                 <p class="team-item-p" lang="en">Product Designer</p>
               </div>
+              <div class="social-links-team">
+                <ul class="social-links-team-list list">
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.instagram.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="instagram"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="twitter"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="facebook"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="linkedin"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -151,6 +233,62 @@
               <div class="team-div">
                 <h3 class="team-item-title">Ольга Рєпіна</h3>
                 <p class="team-item-p" lang="en">Frontend Developer</p>
+              </div>
+              <div class="social-links-team">
+                <ul class="social-links-team-list list">
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.instagram.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка instagram"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка twitter"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка facebook"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка linkedin"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -164,6 +302,62 @@
                 <h3 class="team-item-title">Микола Тарасов</h3>
                 <p class="team-item-p" lang="en">Marketing</p>
               </div>
+              <div class="social-links-team">
+                <ul class="social-links-team-list list">
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.instagram.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка instagram"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка twitter"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка facebook"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка linkedin"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -176,6 +370,112 @@
                 <h3 class="team-item-title">Михайло Єрмаков</h3>
                 <p class="team-item-p" lang="en">UI Designer</p>
               </div>
+              <div class="social-links-team">
+                <ul class="social-links-team-list list">
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.instagram.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка instagram"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка twitter"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.facebook.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка facebook"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="social-link link"
+                      href="https://www.linkedin.com"
+                      target="_blank"
+                      rel="noopener norefferer"
+                      aria-label="іконка linkedin"
+                    >
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Постійні клієнти-->
+      <section class="clients section">
+        <div class="cotnainer">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="clients-list">
+            <li class="clients-list-item">
+              <a class="clients-list-anker" href="">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="./images/icons.svg#Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-list-anker" href="">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="./images/icons.svg#Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-list-anker" href="">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="./images/icons.svg#Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-list-anker" href="">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="./images/icons.svg#Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-list-anker" href="">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="./images/icons.svg#Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-list-anker" href="">
+                <svg class="logo-icon" width="106" height="60">
+                  <use href="./images/icons.svg#Logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
