--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,19 @@
           <div class="header-group">
             <ul class="header-contacts list">
               <li>
-                <a class="header-email link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+                <a class="header-email link" href="mailto:info@devstudio.com">
+                  <svg class="icon-email" width="16" height="12">
+                    <use href="./images/icons.svg#email"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
               </li>
               <li>
-                <a class="header-tel link" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
+                <a class="header-tel link" href="tel:+380961111111">
+                  <svg class="icon-smartphone" width="10" height="16">
+                    <use href="./images/icons.svg#smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a
                 >
               </li>
             </ul>
@@ -102,9 +108,7 @@
                 width="370"
               />
               <div class="portfolio-item-div">
-                <h2 class="portfolio-title">
-                  Постер New Orlean vs Golden
-                </h2>
+                <h2 class="portfolio-title">Постер New Orlean vs Golden</h2>
                 <p class="portfolio-paragraph">Дизайн</p>
               </div>
             </li>
