--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
       <!--Постійні клієнти-->
       <section class="clients section">
         <div class="cotnainer">
-          <h2 class="team-title">Наша команда</h2>
+          <h2 class="team-title">Постійні клієнти</h2>
           <ul class="clients-list">
             <li class="clients-list-item">
               <a class="clients-list-anker" href="">
@@ -482,33 +482,94 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html" lang="en"
-          >Web<span class="logo-span-footer">Studio</span></a
-        >
-        <address>
-          <ul class="footer-list list">
-            <li class="footer-list-item">
+      <div class="footer-container container">
+        <div class="footer-address">
+          <a class="logo-footer link" href="./index.html" lang="en"
+            >Web<span class="logo-span-footer">Studio</span></a
+          >
+          <address>
+            <ul class="footer-list list">
+              <li class="footer-list-item">
+                <a
+                  class="footer-list-adress link"
+                  href="https://goo.gl/maps/2E5mKUay2WvyAkLH7"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a
+                  class="footer-list-cont link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-list-cont link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials">
+          <strong class="footer-title">приєднуйтесь</strong>
+          <ul class="footer-social-links-list list">
+            <li>
               <a
-                class="footer-list-adress link"
-                href="https://goo.gl/maps/2E5mKUay2WvyAkLH7"
+                class="footer-social-link link"
+                href="https://www.instagram.com"
                 target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                rel="noopener norefferer"
+                aria-label="іконка instagram"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-list-item">
-              <a class="footer-list-cont link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+            <li>
+              <a
+                class="footer-social-link link"
+                href="https://twitter.com"
+                target="_blank"
+                rel="noopener norefferer"
+                aria-label="іконка twitter"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-list-item">
-              <a class="footer-list-cont link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+            <li>
+              <a
+                class="footer-social-link link"
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener norefferer"
+                aria-label="іконка facebook"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link link"
+                href="https://www.linkedin.com"
+                target="_blank"
+                rel="noopener norefferer"
+                aria-label="іконка linkedin"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
