--- a/portfolio.html
+++ b/portfolio.html
@@ -19,48 +19,46 @@
   </head>
   <body>
     <header>
-      <header>
-        <div class="header-container container">
-          <a class="logo-header link" href="./index.html" lang="en"
-            >Web<span class="logo-span">Studio</span></a
-          >
-          <nav class="header-nav">
-            <ul class="nav list">
-              <li class="nav-item">
-                <a class="nav-link link" href="./index.html">Студія</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link-active link" href="./portfolio.html"
-                  >Портфоліо</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="">Контакти</a>
-              </li>
-            </ul>
-          </nav>
-          <div class="header-group">
-            <ul class="header-contacts list">
-              <li>
-                <a class="header-email link" href="mailto:info@devstudio.com">
-                  <svg class="icon-email" width="16" height="12">
-                    <use href="./images/icons.svg#email"></use>
-                  </svg>
-                  info@devstudio.com
-                </a>
-              </li>
-              <li>
-                <a class="header-tel link" href="tel:+380961111111">
-                  <svg class="icon-smartphone" width="10" height="16">
-                    <use href="./images/icons.svg#smartphone"></use>
-                  </svg>
-                  +38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-          </div>
+      <div class="header-container container">
+        <a class="logo-header link" href="./index.html" lang="en"
+          >Web<span class="logo-span">Studio</span></a
+        >
+        <nav class="header-nav">
+          <ul class="nav list">
+            <li class="nav-item">
+              <a class="nav-link link" href="./index.html">Студія</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link-active link" href="./portfolio.html"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link" href="">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header-group">
+          <ul class="header-contacts list">
+            <li>
+              <a class="header-email link" href="mailto:info@devstudio.com">
+                <svg class="icon-email" width="16" height="12">
+                  <use href="./images/icons.svg#email"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </li>
+            <li>
+              <a class="header-tel link" href="tel:+380961111111">
+                <svg class="icon-smartphone" width="10" height="16">
+                  <use href="./images/icons.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
-      </header>
+      </div>
     </header>
     <main>
       <section class="projects section">
@@ -203,33 +201,94 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html" lang="en"
-          >Web<span class="logo-span-footer">Studio</span></a
-        >
-        <address>
-          <ul class="footer-list list">
-            <li class="footer-list-item">
+      <div class="footer-container container">
+        <div class="footer-address">
+          <a class="logo-footer link" href="./index.html" lang="en"
+            >Web<span class="logo-span-footer">Studio</span></a
+          >
+          <address>
+            <ul class="footer-list list">
+              <li class="footer-list-item">
+                <a
+                  class="footer-list-adress link"
+                  href="https://goo.gl/maps/2E5mKUay2WvyAkLH7"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a
+                  class="footer-list-cont link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-list-cont link" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials">
+          <strong class="footer-title">приєднуйтесь</strong>
+          <ul class="footer-social-links-list list">
+            <li>
               <a
-                class="footer-list-adress link"
-                href="https://goo.gl/maps/2E5mKUay2WvyAkLH7"
+                class="footer-social-link link"
+                href="https://www.instagram.com"
                 target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                rel="noopener norefferer"
+                aria-label="іконка instagram"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-list-item">
-              <a class="footer-list-cont link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+            <li>
+              <a
+                class="footer-social-link link"
+                href="https://twitter.com"
+                target="_blank"
+                rel="noopener norefferer"
+                aria-label="іконка twitter"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-list-item">
-              <a class="footer-list-cont link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+            <li>
+              <a
+                class="footer-social-link link"
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener norefferer"
+                aria-label="іконка facebook"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link link"
+                href="https://www.linkedin.com"
+                target="_blank"
+                rel="noopener norefferer"
+                aria-label="іконка linkedin"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
