Подправил ДЗ по замечаниям ментора

--- a/index.html
+++ b/index.html
@@ -165,10 +165,8 @@
               <div class="team-div">
                 <h3 class="team-item-title">Ігор Дем'яненко</h3>
                 <p class="team-item-p" lang="en">Product Designer</p>
-              </div>
-              <div class="social-links-team">
                 <ul class="social-links-team-list list">
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.instagram.com"
@@ -181,7 +179,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://twitter.com"
@@ -194,7 +192,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.facebook.com"
@@ -207,7 +205,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.linkedin.com"
@@ -233,10 +231,8 @@
               <div class="team-div">
                 <h3 class="team-item-title">Ольга Рєпіна</h3>
                 <p class="team-item-p" lang="en">Frontend Developer</p>
-              </div>
-              <div class="social-links-team">
                 <ul class="social-links-team-list list">
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.instagram.com"
@@ -249,7 +245,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://twitter.com"
@@ -262,7 +258,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.facebook.com"
@@ -275,7 +271,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.linkedin.com"
@@ -301,10 +297,8 @@
               <div class="team-div">
                 <h3 class="team-item-title">Микола Тарасов</h3>
                 <p class="team-item-p" lang="en">Marketing</p>
-              </div>
-              <div class="social-links-team">
                 <ul class="social-links-team-list list">
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.instagram.com"
@@ -317,7 +311,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://twitter.com"
@@ -330,7 +324,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.facebook.com"
@@ -343,7 +337,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.linkedin.com"
@@ -369,10 +363,8 @@
               <div class="team-div">
                 <h3 class="team-item-title">Михайло Єрмаков</h3>
                 <p class="team-item-p" lang="en">UI Designer</p>
-              </div>
-              <div class="social-links-team">
                 <ul class="social-links-team-list list">
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.instagram.com"
@@ -385,7 +377,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://twitter.com"
@@ -398,7 +390,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.facebook.com"
@@ -411,7 +403,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-team-item">
                     <a
                       class="social-link link"
                       href="https://www.linkedin.com"
