--- a/portfolio.html
+++ b/portfolio.html
@@ -87,114 +87,132 @@
           </ul>
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/technokryak.jpg"
-                alt="Веб-сайт Технокряк"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-paragraph">Веб-сайт</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/technokryak.jpg"
+                  alt="Веб-сайт Технокряк"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-paragraph">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/poster.jpg"
-                alt="Дизайн Постер New Orlean vs Golden Star"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title">Постер New Orlean vs Golden</h2>
-                <p class="portfolio-paragraph">Дизайн</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/poster.jpg"
+                  alt="Дизайн Постер New Orlean vs Golden Star"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title">Постер New Orlean vs Golden</h2>
+                  <p class="portfolio-paragraph">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/seafood.jpg"
-                alt="Додаток Ресторан Seafood"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-paragraph">Додаток</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/seafood.jpg"
+                  alt="Додаток Ресторан Seafood"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-paragraph">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/prime.jpg"
-                alt="Маркетинг Проєкт Prime"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title">Проєкт Prime</h2>
-                <p class="portfolio-paragraph">Маркетинг</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/prime.jpg"
+                  alt="Маркетинг Проєкт Prime"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title">Проєкт Prime</h2>
+                  <p class="portfolio-paragraph">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/boxes.jpg"
-                alt="Додаток Проєкт Boxes"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title">Проєкт Boxes</h2>
-                <p class="portfolio-paragraph">Додаток</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/boxes.jpg"
+                  alt="Додаток Проєкт Boxes"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title">Проєкт Boxes</h2>
+                  <p class="portfolio-paragraph">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/inspiration.jpg"
-                alt="Веб-сайт Inspiration has no Borders"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title" lang="en">
-                  Inspiration has no Borders
-                </h2>
-                <p class="portfolio-paragraph">Веб-сайт</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/inspiration.jpg"
+                  alt="Веб-сайт Inspiration has no Borders"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title" lang="en">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="portfolio-paragraph">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/limited.jpg"
-                alt="Дизайн Видання Limited Edition"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title">Видання Limited Edition</h2>
-                <p class="portfolio-paragraph">Дизайн</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/limited.jpg"
+                  alt="Дизайн Видання Limited Edition"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title">Видання Limited Edition</h2>
+                  <p class="portfolio-paragraph">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/lab.jpg"
-                alt="Маркетинг Проєкт LAB"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title">Проєкт LAB</h2>
-                <p class="portfolio-paragraph">Маркетинг</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/lab.jpg"
+                  alt="Маркетинг Проєкт LAB"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title">Проєкт LAB</h2>
+                  <p class="portfolio-paragraph">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/business.jpg"
-                alt="Додаток Growing Business"
-                width="370"
-              />
-              <div class="portfolio-item-div">
-                <h2 class="portfolio-title" lang="en">Growing Business</h2>
-                <p class="portfolio-paragraph">Додаток</p>
-              </div>
+              <a class="portfolio-link link" href="">
+                <img
+                  class="portfolio-img"
+                  src="./images/business.jpg"
+                  alt="Додаток Growing Business"
+                  width="370"
+                />
+                <div class="portfolio-item-div">
+                  <h2 class="portfolio-title" lang="en">Growing Business</h2>
+                  <p class="portfolio-paragraph">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
